<resources>
    <string name="app_name">SEG2105_Group20_Project</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="admin">Admin</string>
    <string name="dasheats">DashEats</string>
    <string name="dash_eats">Dash Eats</string>
    <string name="mealer">Mealer</string>
    <string name="enter_e_mail_address">Enter E-mail Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="welcome_you_are_logged_in_as">Welcome! You are logged in as</string>
    <string name="welcome_nyou_are_logged_in_as">Welcome! \nYou are logged in as</string>
    <string name="log_out">Log Out</string>
    <string name="back">Back</string>
    <string name="select_a_role">Select a Role</string>
    <string name="cook">Cook</string>
    <string name="client">Client</string>
    <string name="admin_login">admin login</string>
    <string name="cook_sign_up">Cook Sign Up</string>
    <string name="client_sign_up">Client Sign Up</string>
    <string name="address_information">Address Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="address">Address</string>
    <string name="pick_up_address">Pick-Up Address</string>
    <string name="describe_yourself">Describe Yourself</string>
    <string name="successfully_signed_up">Successfully Signed Up!</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_card_information">Credit Card Information</string>
    <string name="cvv">CVV</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="add_void_cheque">Add Picture of Void Cheque</string>
    <string name="expiration_date_mmyy">Expiration Date (MMYY)</string>
    <string name="successfully_nsigned_up">Successfully\nSigned Up</string>
    <string name="exp_mmyy">EXP (MMYY)</string>
    <string name="welcome_you_are_logged_in_as_admin">Welcome! You are logged in as Admin</string>
    <string name="list_of_complaints">List of Complaints</string>
    <string name="complainee">Complainee:</string>
    <string name="id">ID:</string>
    <string name="description">Description</string>
    <string name="complainant">Complainant:</string>
    <string name="dismiss">Dismiss</string>
    <string name="suspend">Suspend</string>
    <string name="suspension_time">Suspension Time</string>
    <string name="days_hours_minutes">Days/Hours/Minutes</string>
    <string name="complainee_id">Complainee ID:</string>
    <string name="welcome_you_are_logged_in_as_client">Welcome! You are logged in as Client</string>
    <string name="status_nsuspended_for_99d_99h_99m">Status:\nSuspended for 99D 99H 99M</string>
    <string name="welcome_you_are_logged_in_as_cook">Welcome! You are logged in as Cook</string>
    <string name="view_meals">View Meals</string>
    <string name="view_offered_meals">View Offered Meals</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="meal_type">Meal Type</string>
    <string name="ingredients">Ingredients</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="allergens">Allergens</string>
    <string name="price">Price</string>
    <string name="offer">Offer</string>
    <string name="delete">Delete</string>
    <string name="add_meal">Add Meal</string>
    <string name="add">Add</string>
    <string name="ban">BAN</string>
    <string name="cook_offered_menu" />
    <string name="unoffer">Unoffer</string>
    <string name="your_profile">Your Profile</string>
    <string name="loading">Loading...</string>
    <string name="view_purchase_requests">VIEW PURCHASE REQUESTS</string>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="purchase_requests">PURCHASE REQUESTS</string>
    <string name="view_purchases">view purchases</string>
    <string name="search_for_meal">SEARCH FOR MEAL</string>
    <string name="search_for_a_meal">Search for a Meal</string>
    <string name="meal_name">Meal Name</string>
    <string name="search">Search</string>
</resources>