<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"

    tools:context=".CookSignUp">


    <TextView
        android:id="@+id/cookSignUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/cook_sign_up"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/CookPersonalInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cookSignUpText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/personal_information"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CookPersonalInfoText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30cccccc"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableTint="@color/green"
        android:drawablePadding="20dp"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30cccccc"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableTint="@color/green"
        android:drawablePadding="20dp"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/cookEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastNameInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30cccccc"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawableTint="@color/green"
        android:drawablePadding="20dp"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/cookPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cookEmailInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30cccccc"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawableTint="@color/green"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/cookAddressInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cookPasswordInput"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30cccccc"
        android:drawableStart="@drawable/ic_baseline_house_24"
        android:drawableTint="@color/green"
        android:drawablePadding="20dp"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/cookDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cookAddressInput"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30cccccc"
        android:drawableStart="@drawable/ic_baseline_description_24"
        android:drawableTint="@color/green"
        android:drawablePadding="20dp"
        android:hint="@string/describe_yourself"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="30dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/cookVoidCheque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cookDescriptionInput"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/green"
        android:text="@string/add_void_cheque" />

    <Button
        android:id="@+id/cookSignUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cookVoidCheque"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/sign_up"
        android:textSize="25sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/cookSignUpBackBtn"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        android:textColor="@color/white" />

</RelativeLayout>